contest page shanges

--- a/Front End Assets/html/templates/partials/gallery.html
+++ b/Front End Assets/html/templates/partials/gallery.html
@@ -5,7 +5,7 @@
     <h1 class="rif-book-margin-top">Gallery</h1>
 
     <div class="gallery-filter-wrapper">
-        
+
         <div class="row">
             <div class="contest-filter rif-form">
                 <span>
@@ -21,42 +21,83 @@
     <!-- /.gallery-wrapper -->
     <div class="gallery">
         <div class="row">
-            <div class="circle-text bg-blue">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read story -></a>
+            <div class="col-md-4">
+                <div class="circle-text bg-blue">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read story -></a>
+                </div>
             </div>
-            <div class="circle-text bg-orange">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read Story -></a>
+            <div class="col-md-4">
+                <div class="circle-text bg-orange">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read Story -></a>
+                </div>
             </div>
-            <div class="circle-text bg-blue">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read story -></a>
+            <div class="col-md-4">
+                <div class="gallery-image-item">
+                    <a href="#">
+                        <img src="images/CMS/Contests/ReadingIsSnowMuchFun.png" />
+                        <div class="header">Poster</div>
+                        <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    </a>
+                </div>
             </div>
-            <div class="circle-text bg-blue">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read story -></a>
+            <div class="col-md-4">
+                <div class="gallery-image-item">
+                    <a href="#">
+                        <img src="images/CMS/Contests/control.png" />
+                        <div class="header">Poster</div>
+                        <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    </a>
+                </div>
             </div>
-            <div class="gallery-image-item">
-                <a href="#">
-                <img src="images/CMS/Contests/ReadingIsSnowMuchFun.png"/>
-                <div class="header">Poster</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                </a>
+            <div class="col-md-4">
+                <div class="circle-text bg-blue">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read story -></a>
+                </div>
             </div>
-            <div class="circle-text bg-blue">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read story -></a>
+            <div class="col-md-4">
+                <div class="circle-text bg-orange">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read Story -></a>
+                </div>
             </div>
-            <div class="circle-text bg-blue">
-                <div class="header">Essay</div>
-                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-                <a href="#">Read story -></a>
+            <div class="col-md-4">
+                <div class="circle-text bg-orange">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read Story -></a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="gallery-image-item">
+                    <a href="#">
+                        <img src="images/CMS/Contests/letsread.png" />
+                        <div class="header">Poster</div>
+                        <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="gallery-image-item">
+                    <a href="#">
+                        <img src="images/CMS/Contests/readingissnowmuchfun.png" />
+                        <div class="header">Poster</div>
+                        <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="circle-text bg-blue">
+                    <div class="header">Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                    <a href="#">Read story -></a>
+                </div>
             </div>
         </div>
     </div>
