Navigation updates, swapping programs and get involved

--- a/Front End Assets/html/templates/partials/large-text-image-video-hero.html
+++ b/Front End Assets/html/templates/partials/large-text-image-video-hero.html
@@ -8,7 +8,7 @@
             <!-- changing classes here can change background color: need to determine choices here -->
             <div class="left">
                 <div class="bg-blue">
-                    <h1>Community</h1>
+                    <h1>Programs & Initiatives</h1>
                     <p>Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</p>
                 </div>
             </div>
