--- a/Front End Assets/html/templates/partials/logo-nav.html
+++ b/Front End Assets/html/templates/partials/logo-nav.html
@@ -11,9 +11,10 @@
         </div>
         <nav class="main-navigation">
             <ul>
-                <li><a href="programs.html" title="Programs and Initiatives">Programs and Initiatives</a></li>
+                <li><a href="programs.html" title="Programs & Initiatives">Programs & Initiatives</a></li>
                 <li><a href="community.html" title="Get Involved">Get Involved</a></li>
-                <li><a href="#" title="About Us">About Us</a></li>
+                <li><a href="about-us.html" title="About Us">About Us</a></li>
+                <li><a href="#" title="Book Club">Book Club</a></li>
                 <li class="button"><a href="donation.html" title="Donate">Donate</a></li>
             </ul>
         </nav>
