--- a/Front End Assets/html/templates/partials/programs-grid.html
+++ b/Front End Assets/html/templates/partials/programs-grid.html
@@ -2,12 +2,12 @@
 
     {% include "partials/rif-book.html" %}
 
-    <h1 class="rif-book-margin-top">Programs and Initiatives</h1>
+    <h1 class="rif-book-margin-top">Get Involved</h1>
 
     <div class="intro-copy lg-sm-container">
         <div>
-            <p>We believe every child deserves the chance to own and love books. As a nonprofit, our programs are supported entirely by generous donations from individuals, companies, foundations.</p>
-        </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consectetur lorem non imperdiet scelerisque. Etiam id placerat augue, non volutpat metus.</p>
+        </div> 
     </div>
 
     <div class="three-equal-col">
