added links to content modules for programs and initiatives

--- a/Front End Assets/html/templates/partials/text-left-image-right.html
+++ b/Front End Assets/html/templates/partials/text-left-image-right.html
@@ -6,6 +6,7 @@
             <div>
                 <h3>Adolescents at Risk</h3>
                 <p>Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+                <p><a href="#" title="Link Title" class="text-cta">Read more</a></p>
             </div>
         </div>
 
