--- a/Front End Assets/html/templates/partials/text-with-circle-images.html
+++ b/Front End Assets/html/templates/partials/text-with-circle-images.html
@@ -14,6 +14,7 @@
         <div class="content">
             <h3>Englewood Initiative</h3>
             <p>Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+            <p><a href="#" title="Link Title" class="text-cta">Read more</a></p>
         </div>
 
     </div><!--/.row -->
