--- a/Front End Assets/scss/modules/_home-hero.scss
+++ b/Front End Assets/scss/modules/_home-hero.scss
@@ -113,5 +113,7 @@
     .donation-note {
         @include font-poppins-medium;
         color: $light-grey;
+        margin:auto;
+        width:65%;
     }
 }
