--- a/Front End Assets/html/templates/partials/content-callout-hero.html
+++ b/Front End Assets/html/templates/partials/content-callout-hero.html
@@ -10,6 +10,7 @@
             <div class="content-wrapper">
                 <h3>Southside Zine</h3>
                 <p>Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Fermentum massa justo sit amet risus.</p>
+                <p><a href="#" title="Link Title" class="btn green">Read more</a></p>
             </div>
         </div>       
     </div><!-- /.content -->
