--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -6,7 +6,7 @@
 @import 'global/main-navigation';
 @import 'global/footer';
 @import 'global/bootstrap-modal';
-@import 'global/responsive-iframe'; 
+@import 'global/responsive-iframe';
 @import 'global/videos';
 
 /* layouts */
@@ -32,3 +32,4 @@
 @import 'modules/large-image-video-text-hero';
 @import 'modules/gallery';
 @import 'modules/circle-text';
+@import 'modules/title-and-text';
