--- a/Front End Assets/html/templates/shell.html
+++ b/Front End Assets/html/templates/shell.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> 
     <link href="../css/rif.css" rel="stylesheet" />
 
+    <script src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <title>RIF Dev</title>
 </head>
 <body>
@@ -28,8 +29,8 @@
 
     </div><!-- /.container-->
 
-    <script src="../libs/jquery/jquery-1.12.1.min.js"></script>
     <script src="../libs/bootstrap/javascripts/bootstrap.min.js"></script>
+    <script src="../scripts/third-party/freewall.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script data-main="../scripts/rif-main" src="../scripts/require.js"></script>
 </body>
