increased vertical spacing between gallery items

--- a/Front End Assets/html/templates/partials/gallery.html
+++ b/Front End Assets/html/templates/partials/gallery.html
@@ -187,6 +187,7 @@
             cellW: 300, 
             cellH: 'auto',
             fixSize: 0,
+            gutterY:80,
             onResize: function() {
                 wall.refresh();
             }
