about us page completed

--- a/Front End Assets/html/templates/partials/border-box-callout.html
+++ b/Front End Assets/html/templates/partials/border-box-callout.html
@@ -1,5 +1,10 @@
 <div class="border-box-callout">
   {% include "partials/title-and-text.html" %}
-  
+
+    <div class="inline-buttons">
+        <a href="#" class="btn green">The Board</a>
+        <a href="#" class="btn green">Partners</a>
+        <a href="#" class="btn green">Supporters</a>
+    </div>
 
 </div>
