--- a/Front End Assets/scss/global/_base.scss
+++ b/Front End Assets/scss/global/_base.scss
@@ -237,6 +237,19 @@ a:active,
 .bg-orange {
     background: $orange;
 }
+
+.bg-purple {
+    background:$purple; 
+}
+
+.bg-green {
+    background:$green; 
+} 
+
+.bg-gray {
+    background:$light-grey; 
+}
+
 // INPUTS
 .rif-form {
 
