--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -33,3 +33,6 @@
 @import 'modules/gallery';
 @import 'modules/circle-text';
 @import 'modules/title-and-text';
+@import 'modules/border-box-callout'; 
+@import 'modules/colored-callout-box'; 
+@import 'modules/vertical-timeline';
