move styles to sass files.  Hooked up dropdown filters to the items displayed(still needs work).  Fix dropdown styles and HeroImageText block styling

--- a/Front End Assets/scss/modules/_image-video-text-hero.scss
+++ b/Front End Assets/scss/modules/_image-video-text-hero.scss
@@ -27,11 +27,16 @@
 
         .left {
             .img-wrapper {
+                
+                    margin-left:70px;
+                    
+                    @media #{$media-mobile-view}{
+                        margin:0 auto;
+                    }
                 img {
                     @include box-shadow;
-
                      @media #{$media-mobile-view} {
-                        margin: 0 auto $v-spacing-lg;
+                        margin: 0 auto ;
                      }
                 }
 
