--- a/Front End Assets/html/templates/partials/gallery.html
+++ b/Front End Assets/html/templates/partials/gallery.html
@@ -12,9 +12,9 @@
                     <div class="select">
                         <span class="arr"></span>
                         <select id="contest-filter">
-                            <option>All Contests</option>
-                            <option>2016 Contest</option>
-                            <option>2015 Contest</option>
+                            <option value="">All Contests</option>
+                            <option value=".2016">2016 Contest</option>
+                            <option value=".2015">2015 Contest</option>
                         </select>
                     </div>
                 </span>
@@ -35,149 +35,87 @@
     </div>
 
     <div class="gallery">
-    <div class="brick essay">
-        <div class="circle-text bg-blue">
-            <div class="header">Essay</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read story -></a>
-        </div>
-    </div>
-    <div class="brick poem">
-        <div class="circle-text bg-orange">
-            <div class="header">Poem</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read Story -></a>
-        </div>
-    </div>
-    <div class="brick essay">
-        <div class="gallery-image-item">
-            <a href="#">
-                <img src="images/CMS/Contests/ReadingIsSnowMuchFun.png" />
-                <div class="header">Essay</div>
+        <div class="brick essay 2015">
+            <div class="circle-text bg-blue">
+                <div class="header">2015 Essay</div>
                 <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            </a>
+                <a href="#">Read story -></a>
+            </div>
         </div>
-    </div>
-    <div class="brick poster">
-        <div class="gallery-image-item">
-            <a href="#">
-                <img src="images/CMS/Contests/control.png" />
-                <div class="header">Poster</div>
+        <div class="brick poem 2015">
+            <div class="circle-text bg-orange">
+                <div class="header">2015 Poem</div>
                 <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            </a>
+                <a href="#">Read Story -></a>
+            </div>
         </div>
-    </div>
-    <div class="brick essay">
-        <div class="circle-text bg-blue">
-            <div class="header">Essay</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read story -></a>
+        <div class="brick essay 2016">
+            <div class="gallery-image-item">
+                <a href="#">
+                    <img src="images/CMS/Contests/ReadingIsSnowMuchFun.png" />
+                    <div class="header">2016 Essay</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="brick essay">
-        <div class="circle-text bg-orange">
-            <div class="header">Essay</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read Story -></a>
+        <div class="brick poster 2015">
+            <div class="gallery-image-item">
+                <a href="#">
+                    <img src="images/CMS/Contests/control.png" />
+                    <div class="header">2015 Poster</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="brick poem">
-        <div class="circle-text bg-orange">
-            <div class="header">Poem</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read Story -></a>
-        </div>
-    </div>
-    <div class="brick poem">
-        <div class="gallery-image-item">
-            <a href="#">
-                <img src="images/CMS/Contests/letsread.png" />
-                <div class="header">Poem</div>
+        <div class="brick essay 2016">
+            <div class="circle-text bg-blue">
+                <div class="header">2016 Essay</div>
                 <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            </a>
+                <a href="#">Read story -></a>
+            </div>
         </div>
-    </div>
-    <div class="brick poster">
-        <div class="gallery-image-item">
-            <a href="#">
-                <img src="images/CMS/Contests/readingissnowmuchfun.png" />
-                <div class="header">Poster</div>
+        <div class="brick essay 2016">
+            <div class="circle-text bg-orange">
+                <div class="header">2016 Essay</div>
                 <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            </a>
+                <a href="#">Read Story -></a>
+            </div>
         </div>
-    </div>
-    <div class="brick essay">
-        <div class="circle-text bg-blue">
-            <div class="header">Essay</div>
-            <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
-            <a href="#">Read story -></a>
+        <div class="brick poem 2015">
+            <div class="circle-text bg-orange">
+                <div class="header">2015 Poem</div>
+                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                <a href="#">Read Story -></a>
+            </div>
+        </div>
+        <div class="brick poem 2016">
+            <div class="gallery-image-item">
+                <a href="#">
+                    <img src="images/CMS/Contests/letsread.png" />
+                    <div class="header">2016 Poem</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                </a>
+            </div>
+        </div>
+        <div class="brick poster 2016">
+            <div class="gallery-image-item">
+                <a href="#">
+                    <img src="images/CMS/Contests/readingissnowmuchfun.png" />
+                    <div class="header">2016 Poster</div>
+                    <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                </a>
+            </div>
+        </div>
+        <div class="brick essay 2015">
+            <div class="circle-text bg-blue">
+                <div class="header">2015 Essay</div>
+                <div class="description">Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</div>
+                <a href="#">Read story -></a>
+            </div>
         </div>
     </div>
 </div>
 
-<style>
-    .brick {
-        width: 300px;
-    }
-    
-    .select {
-  font-size: 14px;
-  position: relative;
-  display: inline-block;
-}
-
-.select select {
-  outline: none;
-  -webkit-appearance: none;
-  display: block;
-  padding: 1.2em 3em 1.2em 1.5em;
-  margin: 0;
-
-  transition: border-color 0.2s;
-  border: 2px solid #9aedd8;
-  border-radius: 5px;
-
-  background: #fff;
-  color: #888;
-  line-height: normal;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.select .arr {
-  background: #fff;
-  bottom: 5px;
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 5px;
-  pointer-events: none;
-}
-.select .arr:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  margin-top: -5px;
-  pointer-events: none;
-  border-top: 10px solid #888;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-}
-
-.select .arr:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  margin-top: -5px;
-  pointer-events: none;
-  border-top: 6px solid #fff;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-}
-</style>
 <script>
     $(function() {
         var wall = new Freewall(".gallery");
@@ -195,20 +133,39 @@
         
         wall.fitWidth();
         
-            $('#type-filter').on('change', function() {
-        var filter = this.value ; // or $(this).val()
-        
-        //alert(filter);
-        
-        if (filter != "") {
-            wall.filter(filter);
-        } else {
-            wall.unFilter();
-        }   
-});
-    });
+        $('#type-filter').on('change', function() {
+            var typeFilter = this.value ; // or $(this).val()
             
-    
-
+            var contestFilter = $("#contest-filter").val();
+            
+            filterFreeWall(typeFilter, contestFilter)
+        });
+        
+        $('#contest-filter').on('change', function() {
+            var contestFilter = this.value ; // or $(this).val()
+            
+            var typeFilter = $("#type-filter").val();
+            
+            filterFreeWall(typeFilter, contestFilter)
+        });
+        
+        
+        function filterFreeWall(typeFilter, contestFilter){
+            if (typeFilter != "" && typeFilter != undefined) {
+                if (contestFilter !="" && contestFilter != undefined){
+                    typeFilter = typeFilter + " , " + contestFilter;
+                }
+                alert("Case 1: " + typeFilter);
+                wall.filter(typeFilter);
+            } else {
+                alert("Case 2: " + contestFilter);
+                if (contestFilter !="" && contestFilter != undefined){
+                    wall.filter(contestFilter);
+                }else{
+                    wall.unFilter();
+                }
+            }             
+        }
+    });
 
 </script>
